--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "ROC-Client",
     "ROC-Server"
   ],
+  "scripts": {
+    "client": "yarn workspace ROC-Client run build && yarn workspace ROC-Client run start",
+    "server": "yarn workspace ROC-Server run start"
+  },
   "engines": {
     "node": ">=16",
     "yarn": ">=1.22.0"
